HOL-Library.

* Theory "HOL-Combinatorics.Transposition" provides elementary swap
operation "transpose".

* Lemma "permutes_induct" has been given stronger hypotheses and named
premises. INCOMPATIBILITY.

* Combinator "Fun.swap" resolved into a mere input abbreviation in
separate theory "Transposition" in HOL-Combinatorics. INCOMPATIBILITY.

* Bit operations set_bit, unset_bit and flip_bit are now class
operations. INCOMPATIBILITY.

* Abbreviation "max_word" has been moved to session Word_Lib in the AFP,
as also have constants "shiftl1", "shiftr1", "sshiftr1", "bshiftr1",
"setBit", "clearBit". See there further the changelog in theory Guide.
INCOMPATIBILITY.

* New simp rules: less_exp, min.absorb1, min.absorb2, min.absorb3,
min.absorb4, max.absorb1, max.absorb2, max.absorb3, max.absorb4.  Minor
INCOMPATIBILITY.

* Sledgehammer:
 - Removed legacy "lam_lifting" (synonym for "liftinng") from option
   "lam_trans". Minor INCOMPATIBILITY.
 - Renamed "hide_lams" to "opaque_lifting" in option "lam_trans".
   Minor INCOMPATIBILITY.
 - Added "opaque_combs" to option "lam_trans": lambda expressions are rewritten
   using combinators, but the combinators are kept opaque, i.e. without
   definitions.

* Metis:
 - Renamed option "hide_lams" to "opaque_lifting". Minor INCOMPATIBILITY.

*** ML ***

* ML antiquotations \<^try>\<open>expr\<close> and \<^can>\<open>expr\<close> operate directly on
the given ML expression, in contrast to functions "try" and "can" that
modify application of a function.

* ML antiquotations for conditional ML text:

    \<^if_linux>\<open>...\<close>
    \<^if_macos>\<open>...\<close>
    \<^if_windows>\<open>...\<close>
    \<^if_unix>\<open>...\<close>

* External bash processes are always managed by Isabelle/Scala, in
contrast to Isabelle2021 where this was only done for macOS on Apple
Silicon.

The main Isabelle/ML interface is Isabelle_System.bash_process with
result type Process_Result.T (resembling class Process_Result in Scala);